--- a/client/package.json
+++ b/client/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mui/material": "^7.0.1",
     "@mui/x-charts": "^7.28.0",
-    "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "autoprefixer": "^10.4.17",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.2",
     "motion": "^12.6.2",
     "postcss": "^8.4.35",
     "react": "^18.2.0",
