--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.8.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.6.2",
     "motion": "^12.6.2",
